--- a/index.html
+++ b/index.html
@@ -3,13 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Instagram flexbox exercise</title>
   </head>
   <body>
     <div class="instagram-wrapper">
-      <div class="instagram-phone"></div>
-      <div class="instagram-continue"></div>
+      <div class="instagram-phone">
+        <img
+          src="./img/instagram-celular.png"
+          alt="um celular usando o instagram"
+        />
+      </div>
+      <div class="instagram-continue">
+        <div class="group">
+          <img
+            class="instagram-logo"
+            src="./img/instagram-logo.png"
+            alt="instagram"
+          />
+          <div class="profile-photo">
+            <img src="./img/prefil-instagram.jpg" alt="foto de perfil" />
+          </div>
+          <a class="instagram-login" href="#">Continue as Marcio</a>
+          <a class="instagram-logout" href="#">Remove account</a>
+        </div>
+        <div class="group">
+          <p class="not-account">Not Marcio?</p>
+
+          <p class="not-account">
+            <span class="link-blue">Switch Account</span>
+            or
+            <span class="link-blue">Sign up</span>
+          </p>
+        </div>
+        <div class="get-the-app">
+          <p class="get-app">Get the app.</p>
+          <div class="download">
+            <a href="#" class="app-download"></a>
+            <a href="#" class="app-download"></a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
